Only Ui remaining

--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-MONGODB_URI="mongodb+srv://msankrish92_db_user:Jw2IZ4j5dXowEkVL@testcase.tgge2go.mongodb.net/?retryWrites=true&w=majority&appName=TestCaseGenAI"
+MONGODB_URI="mongodb+srv://msankrish4:test123@cluster0.y3edwtk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
-DB_NAME="db_testcases"
+DB_NAME="project"
 
-COLLECTION_NAME="test_cases"
-VECTOR_INDEX_NAME="vector_index_test_cases"
-BM25_INDEX_NAME="bm25_search"
+COLLECTION_NAME="userstories"
+VECTOR_INDEX_NAME="userstories"
+BM25_INDEX_NAME="userstorybm25"
 
 
-USER_STORIES_COLLECTION="vector_index_user_story"
-USER_STORIES_COLLECTION_NAME="vector_index_user_story"
-USER_STORIES_VECTOR_INDEX_NAME="vector_index_user_story"
+USER_STORIES_COLLECTION="userstories"
+USER_STORIES_COLLECTION_NAME="userstories"
+USER_STORIES_VECTOR_INDEX_NAME="userstories"
 
 TESTLEAF_API_BASE="https://api.testleaf.com/ai"
 USER_EMAIL="msankrish92@gmail.com"
